tests/shared/examples/fails/creation_7.py
# COMPILE_PREFABS
from prefab_classes import prefab


@prefab(compile_prefab=True, compile_fallback=True)
class DejaVu:
    x: int


@prefab(compile_prefab=True, compile_fallback=True)
class DejaVu:
    x: int
